--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -5,3 +5,8 @@ mcbg:
 system_authentication_token: "Ge32"
 log_level: debug
 gcp_api_key: please_change_me
+throttled: 
+  enabled: true
+  global: 
+    limit: 1
+    period: 1
