--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "teacher-training-api",
   "private": true,
-
   "engines": {
     "node": "12.x"
   },
@@ -11,6 +10,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "^0.2.1",
     "@rails/webpacker": "^5.2.1",
+    "@rails/ujs": "^6.0.0",
     "accessible-autocomplete": "^2.0.3",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.9.1",
