[755] Clean up include examples for public api end points

--- a/swagger/public_v1/component_schemas/LocationRelationships.yml
+++ b/swagger/public_v1/component_schemas/LocationRelationships.yml
@@ -8,3 +8,5 @@ properties:
     $ref: "#/components/schemas/Relationship"
   course:
     $ref: "#/components/schemas/Relationship"
+  location_status:
+    $ref: "#/components/schemas/Relationship"
