--- a/swagger/public_v1/component_schemas/CourseRelationships.yml
+++ b/swagger/public_v1/component_schemas/CourseRelationships.yml
@@ -2,15 +2,9 @@
 description: "This schema is used to describe associations that can be returned with a course."
 type: object
 properties:
+  recruitment_cycle:
+    $ref: "#/components/schemas/Relationship"
   accredited_body:
     $ref: "#/components/schemas/Relationship"
-  locations:
-    $ref: "#/components/schemas/RelationshipList"
-  modern_languages:
-    $ref: "#/components/schemas/RelationshipList"
-  provider_locations:
-    $ref: "#/components/schemas/RelationshipList"
   provider:
     $ref: "#/components/schemas/Relationship"
-  subjects:
-    $ref: "#/components/schemas/RelationshipList"
