--- a/swagger/public_v1/component_schemas/RecruitmentCycleAttributes.yml
+++ b/swagger/public_v1/component_schemas/RecruitmentCycleAttributes.yml
@@ -7,13 +7,16 @@ properties:
   year:
     type: integer
     description: "The year that this recruitment cycle applies to."
+    example: 2021
   application_start_date:
     type: string
     format: date
     description: >-
       The default date applications start being taken for this recruitment cycle.
+    example: "2020-10-13"
   application_end_date:
     type: string
     format: date
     description: >-
       The default date applications stop being taken for this recruitment cycle.
+    example: "2021-10-03"
