--- a/swagger/public_v1/component_schemas/ProviderFilter.yml
+++ b/swagger/public_v1/component_schemas/ProviderFilter.yml
@@ -2,7 +2,7 @@ type: object
 example: ""
 description: "This schema is used to search within collections to return more specific results."
 properties:
-  changed_since:
-    description: "Return providers that only have changed since date (ISO 8601 date format)"
+  updated_since:
+    description: "Return providers that only have updated since date (ISO 8601 date format)"
     type: string
     example: "2020-11-13T11:21:55Z"
