--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,6 +1,7 @@
 gcp_api_key: please_change_me
+publish_api_url: https://www.api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://www.publish-teacher-training-courses.service.gov.uk
-find_url: https://www2.find-postgraduate-teacher-training.service.gov.uk
+find_url: https://www.find-postgraduate-teacher-training.service.gov.uk
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
