--- a/config/settings/qa.yml
+++ b/config/settings/qa.yml
@@ -1,6 +1,7 @@
 gcp_api_key: please_change_me
-publish_url: https://www.qa.publish-teacher-training-courses.service.gov.uk
-find_url: https://www.qa.find-postgraduate-teacher-training.service.gov.uk
+publish_api_url: https://qa.api.publish-teacher-training-courses.service.gov.uk
+publish_url: https://qa.publish-teacher-training-courses.service.gov.uk
+find_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
