[993] Add sandbox environment
Add settings and env files for sandbox.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,4 +27,13 @@ Style/HashTransformValues:
 Naming/MemoizedInstanceVariableName:
   EnforcedStyleForLeadingUnderscores: optional
 
-
+Rails/UnknownEnv:
+  Environments:
+    - production
+    - development
+    - test
+    - pentest
+    - rollover
+    - sandbox
+    - qa_pass
+    - research
