--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -2,3 +2,4 @@ gcp_api_key: please_change_me
 publish_api_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
 find_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
+mapit_url: https://mapit.mysociety.org
