--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -4,6 +4,7 @@ system_authentication_token: "Ge32"
 gcp_api_key: please_change_me
 publish_url: https://www.publish-teacher-training-courses.service.gov.uk
 find_url: https://www2.find-postgraduate-teacher-training.service.gov.uk
+mapit_url: https://mapit.mysociety.org
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
