--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -2,8 +2,9 @@ gcp_api_key: please_change_me
 publish_api_url: https://qa.api.publish-teacher-training-courses.service.gov.uk
 publish_url: https://staging.publish-teacher-training-courses.service.gov.uk
 find_url: https://staging.find-postgraduate-teacher-training.service.gov.uk
+mapit_url: https://mapit.mysociety.org
 bg_jobs:
   save_statistic:
     cron: "0 0 * * *" # daily at midnight
-    class: "SaveStatisticJob" 
+    class: "SaveStatisticJob"
     queue: save_statistic
