Set the Mapit URL in the top level setting file

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -38,3 +38,4 @@ skylight:
   enable: false
   authentication: please_change_me
 mapit_api_key: please_change_me
+mapit_url: https://mapit.mysociety.org
