--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
       matrix: ${{ fromJson(needs.prepare-matrix.outputs.environments) }}
     steps:
       - name: Start ${{ matrix.environment }} Deployment
-        uses: bobheadxi/deployments@master
+        uses: bobheadxi/deployments@v0.4.3
         id: deployment
         with:
           step: start
@@ -123,7 +123,7 @@ jobs:
 
       - name: Update ${{ matrix.environment }} status
         if: ${{ always() }}
-        uses: bobheadxi/deployments@master
+        uses: bobheadxi/deployments@v0.4.3
         with:
           step:   finish
           token:  ${{ secrets.GITHUB_TOKEN }}
