--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,3 +96,15 @@ jobs:
         workflow: Deploy
         token: ${{ secrets.ACTIONS_API_ACCESS_TOKEN  }}
         inputs: '{"qa": "true", "staging": "true", "production": "true", "sandbox": "true", "sha": "${{ env.GIT_SHA_SHORT }}"}'
+
+    - name: Alert Build Failures
+      if: ${{ failure() && github.ref == 'refs/heads/master' }}
+      uses: rtCamp/action-slack-notify@master
+      env:
+        SLACK_CHANNEL: twd_bat_devops
+        SLACK_COLOR: '#ef5343'
+        SLACK_ICON_EMOJI: ':github-logo:'
+        SLACK_USERNAME: Teacher Training API
+        SLACK_TITLE: '<!channel> Build failure'
+        SLACK_MESSAGE: ':alert: Teacher Training API Build failure :sadparrot:'
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
