--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,6 +140,6 @@ jobs:
           SLACK_COLOR: '#ef5343'
           SLACK_ICON_EMOJI: ':github-logo:'
           SLACK_USERNAME: Teacher Training API
-          SLACK_TITLE: '<!channel> Deploy to ${{ matrix.environment }} Failed'
-          SLACK_MESSAGE: ':alert: Build failure on ${{ matrix.environment }} :sadparrot:'
+          SLACK_TITLE: Deploy to ${{ matrix.environment }} Failed
+          SLACK_MESSAGE: ':alert: <!channel> Build failure on ${{ matrix.environment }} :sadparrot:'
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
