Add subject_codes to public/v1 API

--- a/swagger/public_v1/component_schemas/CourseAttributes.yml
+++ b/swagger/public_v1/component_schemas/CourseAttributes.yml
@@ -334,3 +334,9 @@ properties:
     type: string
     description: "Generated summary of the course."
     example: "PGCE with QTS full time"
+  subject_codes:
+    type: array
+    description: "The course’s subject codes, corresponding to subjects available on the `/subjects` endpoint"
+    items:
+      type: string
+      example: "00"
