--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -11,8 +11,12 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  additional_paths: ["node_modules/govuk-frontend/govuk"]
-
+  additional_paths:
+    [
+      "app/components",
+      "node_modules/govuk-frontend/govuk",
+    ]
+    
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
