--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@ministryofjustice/frontend": "^0.2.1",
     "@rails/webpacker": "^5.2.1",
     "accessible-autocomplete": "^2.0.3",
+    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.9.1",
     "govuk-frontend": "^3.9.1",
+    "jquery": "^3.6.0",
     "set-value": "^3.0.2"
   },
   "devDependencies": {
