[2392] Rake task to send entities
* Configure entities in config/analytics.yml
* Add rake big_query:send_import_events that will backfill all entities
  in the config file

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -22,6 +22,7 @@ Lint/ConstantDefinitionInBlock:
     - "spec/validators/email_validator_spec.rb"
     - "spec/validators/phone_validator_spec.rb"
     - "spec/validators/reference_number_format_validator_spec.rb"
+    - "lib/tasks/big_query.rake"
 
 # Offense count: 3
 # Configuration parameters: IgnoreLiteralBranches, IgnoreConstantBranches.
