--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
   variables:
     statement_timeout: 20000
-    idle_in_transaction_session_timeout: 10000  
+    idle_in_transaction_session_timeout: 10000
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
   host: <%= ENV['DB_HOSTNAME'] %>
@@ -36,4 +36,7 @@ production:
   <<: *default
 
 sandbox:
+  <<: *default
+
+loadtest:
   <<: *default
