[320] Add persona authentication for review apps

--- a/config/settings/review.yml
+++ b/config/settings/review.yml
@@ -4,3 +4,6 @@ environment:
   name: "review"
 publish_url: https://qa.publish-teacher-training-courses.service.gov.uk
 find_url: https://qa.find-postgraduate-teacher-training.service.gov.uk
+authentication:
+  secret: secret
+  mode: persona
