--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -4,3 +4,5 @@ publish_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
 find_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
 environment:
   name: "sandbox"
+
+base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
