[0377] Added DSI prod for sandbox configs

--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -4,3 +4,12 @@ publish_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
 find_url: https://sandbox.find-postgraduate-teacher-training.service.gov.uk
 environment:
   name: "sandbox"
+
+base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
+
+dfe_signin:
+  issuer: https://oidc.signin.education.gov.uk
+  secret: please_change_me # Override with SETTINGS__DFE_SIGNIN__SECRET
+  profile: https://profile.signin.education.gov.uk
+  base_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
+  user_search_url: https://support.signin.education.gov.uk/users
