[0377] Fixed review issue

--- a/config/settings/sandbox.yml
+++ b/config/settings/sandbox.yml
@@ -11,5 +11,5 @@ dfe_signin:
   issuer: https://oidc.signin.education.gov.uk
   secret: please_change_me # Override with SETTINGS__DFE_SIGNIN__SECRET
   profile: https://profile.signin.education.gov.uk
-  base_url: https://sandbox.publish-teacher-training-courses.service.gov.uk
+  base_url: https://sandbox.api.publish-teacher-training-courses.service.gov.uk
   user_search_url: https://support.signin.education.gov.uk/users
