--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       context: .
       cache_from:
         - ghcr.io/dfe-digital/teacher-training-api:${IMAGE_TAG:-latest}
-        - ghcr.io/dfe-digital/teacher-training-api-middleman:master
+        - ghcr.io/dfe-digital/teacher-training-api-middleman:main
     image: ghcr.io/dfe-digital/teacher-training-api:${IMAGE_TAG:-latest}
     command: ash -c "rm -f tmp/pids/server.pid && bundle exec rails server -p 3001 -b '0.0.0.0'"
     ports:
