--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -84,7 +84,7 @@ runs:
         slack-webhook: ${{ inputs.slack-webhook }}
 
     - name: Alert on Failure
-      if: ${{ failure() && github.ref == 'refs/heads/master' }}
+      if: ${{ failure() && github.ref == 'refs/heads/main' }}
       uses: rtCamp/action-slack-notify@master
       env:
         SLACK_CHANNEL: twd_findpub_tech
