--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -165,6 +165,7 @@ jobs:
     - name: Run tests
       run: |
         docker-compose exec -T web /bin/sh -c 'bundle config --local disable_exec_load true'
+        docker-compose run -v ${PWD}/out:/app/out -v ${PWD}/coverage:/app/coverage
         docker-compose exec -T web /bin/sh -c 'bundle exec rake parallel:setup'
         docker-compose exec -T web /bin/sh -c 'COVERAGE=true bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
       env:
