--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -164,10 +164,10 @@ jobs:
 
     - name: Run tests
       run: |
-        docker-compose exec -T web /bin/sh -c 'bundle config --local disable_exec_load true'
-        docker-compose run -v ${PWD}/coverage:/app/coverage \
-        web /bin/sh -c 'bundle exec rake parallel:setup' \
-        web /bin/sh -c 'bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
+        docker-compose run --rm -v ${PWD}/coverage:/app/coverage \
+        'bundle config --local disable_exec_load true' \
+        'bundle exec rake parallel:setup' \
+        'bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
       env:
         IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
 
